--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "vinyl-paths": "^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "coffee-script": "^1.9.1",
     "del": "^1.1.1",
@@ -15,8 +13,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
-    "gulp-zip": "^2.0.3",
-    "vinyl-paths": "^1.0.0"
+    "gulp-zip": "^2.0.3"
   },
   "scripts": {
     "test": "mocha --opts test/mocha.opts -R dot"
