--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "devDependencies": {
     "coffee-script": "^1.9.1",
     "del": "^1.1.1",
+    "espower-coffee": "^0.10.0",
     "gulp": "^3.8.11",
     "gulp-coffee": "^2.3.1",
     "gulp-haml": "^0.1.4",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
-    "gulp-zip": "^2.0.3"
+    "gulp-zip": "^2.0.3",
+    "mocha": "^2.2.1",
+    "power-assert": "^0.10.2"
   },
   "scripts": {
     "test": "mocha --opts test/mocha.opts -R dot"
