Update wercker setting about deploy

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "power-assert": "^0.10.2"
   },
   "scripts": {
-    "test": "mocha --opts test/mocha.opts -R dot"
+    "test": "mocha --opts test/mocha.opts -R dot",
+    "zip": "gulp zip",
+    "app_version": "gulp app_version --silent"
   },
   "repository": {
     "type": "git",
