--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "devDependencies": {
     "coffee-script": "^1.9.1",
     "del": "^1.1.1",
+    "dotenv": "^1.0.0",
     "espower-coffee": "^0.10.0",
     "gulp": "^3.8.11",
     "gulp-coffee": "^2.3.1",
     "gulp-haml": "^0.1.4",
+    "gulp-json-editor": "^2.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
