Fix time out error in wercker.yml

--- a/wercker.yml
+++ b/wercker.yml
@@ -37,10 +37,4 @@ deploy:
     - script:
         name: Uploading a package to update an existing store item
         code: |
-          curl \
-          -H "Authorization: Bearer $GOOGLE_APP_TOKEN" \
-          -H "x-goog-api-version: 2" \
-          -X PUT \
-          -T dist-$APP_VERSION.zip \
-          -v \
-          https://www.googleapis.com/upload/chromewebstore/v1.1/items/$APP_ID
+          curl -H "Authorization: Bearer $GOOGLE_APP_TOKEN" -H "x-goog-api-version: 2" -X PUT -T dist-$APP_VERSION.zip -v https://www.googleapis.com/upload/chromewebstore/v1.1/items/$APP_ID
