--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "browserify": "^9.0.8",
     "coffee-script": "^1.9.1",
+    "coffeeify": "^1.1.0",
     "del": "^1.1.1",
     "dotenv": "^1.0.0",
     "espower-coffee": "^0.10.0",
@@ -18,7 +20,9 @@
     "gulp-sass": "^1.3.3",
     "gulp-zip": "^2.0.3",
     "mocha": "^2.2.1",
-    "power-assert": "^0.10.2"
+    "power-assert": "^0.10.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "mocha --opts test/mocha.opts -R dot",
