--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.3",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^3.3.4",
+    "jquery": "^2.1.4",
+    "underscore": "^1.8.3"
+  },
   "devDependencies": {
     "browserify": "^9.0.8",
     "coffee-script": "^1.9.1",
