--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
     "gulp-zip": "^2.0.3",
+    "jsdom": "^3.1.2",
     "mocha": "^2.2.1",
     "power-assert": "^0.10.2",
     "vinyl-buffer": "^1.0.0",
