--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "browserify": "^9.0.8",
+    "coffee-coverage": "^0.5.4",
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.1.0",
     "del": "^1.1.1",
@@ -23,6 +24,7 @@
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
     "gulp-zip": "^2.0.3",
+    "istanbul": "^0.3.13",
     "jsdom": "^3.1.2",
     "mocha": "^2.2.1",
     "power-assert": "^0.10.2",
