--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coffee-coverage": "^0.5.4",
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.1.0",
+    "coveralls": "^2.11.2",
     "del": "^1.1.1",
     "dotenv": "^1.0.0",
     "espower-coffee": "^0.10.0",
@@ -34,6 +35,7 @@
   },
   "scripts": {
     "test": "mocha --opts test/mocha.opts -R dot",
+    "coveralls": "istanbul cover _mocha --report lcovonly -- -R dot --require coffee-coverage/register-istanbul && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "zip": "gulp zip",
     "app_version": "gulp app_version --silent"
   },
