--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,9 @@ box: wercker/nodejs
 build:
   steps:
     - npm-install
-    - npm-test
+    - script:
+        name: npm run coveralls
+        code: npm run coveralls
     - script:
         name: echo nodejs information
         code: |
