--- a/wercker.yml
+++ b/wercker.yml
@@ -4,7 +4,7 @@ build:
     - npm-install
     - script:
         name: npm run coveralls
-        code: npm run coveralls
+        code: COVERALLS_GIT_BRANCH=$WERCKER_GIT_BRANCH npm run coveralls
     - script:
         name: echo nodejs information
         code: |
