--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,11 @@
 
   "name": "Forkwell Jobs",
   "description": "「スキル」と「こだわり」で選べる、エンジニア目線の求人・転職サイト",
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
 
   "browser_action": {
     "default_icon": "images/icon.png",
