--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "test": "mocha --opts test/mocha.opts -R dot",
-    "coveralls": "istanbul cover _mocha --report lcovonly -- -R dot --require coffee-coverage/register-istanbul && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "coveralls": "istanbul cover _mocha --report lcovonly -- -R dot --require test/coffee-coverage-loader.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "zip": "gulp zip",
     "app_version": "gulp app_version --silent"
   },
